---------------------------------------------------------------------------------------------------
Version: 0.26.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.26.1
Date: 2023-12-02
  Bugfixes:
    - Fix migration in some cases from earlier than 0.16.0
---------------------------------------------------------------------------------------------------
Version: 0.26.0
Date: 2023-11-21
  Changes:
    - Added better support for modded pipes
    - Added support for Bob's adjustable inserters
    - Flexible offshore pump placement now works for modded offshore pumps
    - *Slightly* better support for modded entities in general
---------------------------------------------------------------------------------------------------
Version: 0.25.2
Date: 2023-11-07
  Bugfixes:
    - Fix crash when using Factorio v1.1.95 (experimental)
---------------------------------------------------------------------------------------------------
Version: 0.25.1
Date: 2023-10-04
  Changes:
    - Better support for modded transport belts.
---------------------------------------------------------------------------------------------------
Version: 0.25.0
Date: 2023-09-25
  Features:
    - Added module preloading, which allows creating bot requests for modules even if the assembling machine is not high enough tier.
  Gui:
    - Clarified some descriptions in project settings.
    - Removed cutting off of text on various buttons.
---------------------------------------------------------------------------------------------------
Version: 0.24.3
Date: 2023-09-25
  Bugfixes:
    - Fix (harmless) error message when upgrading belt via blueprint paste.
---------------------------------------------------------------------------------------------------
Version: 0.24.2
Date: 2023-09-24
  Bugfixes: