@@ -13,7 +13,8 @@
         "WiderNoticeTextBoxes": true,
         "factorio-test": true,
         "PickerDollies": true,
-        "stdlib": true
+        "stdlib": true,
+        "bobinserters": true
       },
       "disableExtraMods": true,
       "factorioArgs": [
@@ -49,7 +50,8 @@
         "WiderNoticeTextBoxes": true,
         "factorio-test": false,
         "PickerDollies": true,
-        "stdlib": true
+        "stdlib": true,
+        "bobinserters": true
       },
       "disableExtraMods": true,
       "factorioArgs": [
@@ -75,7 +77,8 @@
         "WiderNoticeTextBoxes": true,
         "factorio-test": true,
         "PickerDollies": true,
-        "stdlib": true
+        "stdlib": true,
+        "bobinserters": true
       },
       "disableExtraMods": true,
       "factorioArgs": [
