@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.26.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Adjustable inserters: Fix pasting rotated blueprints with inserters having adjusted positions
 ---------------------------------------------------------------------------------------------------
 Version: 0.26.1
 Date: 2023-12-02
